# mmr-test

./: Cargo.toml
benches/: sp1_merklize.rs
sp1-programs/: Cargo.toml
sp1-programs/bench-results/: merklize.md
sp1-programs/elfs/: merklize
sp1-programs/src/: lib.rs
src/: error.rs  lib.rs  mmr.rs
src/utils/: hash.rs  range.rs
